appId: com.babyloop.mobile
---
- launchApp
- assertVisible: "Keşfet"
- assertVisible: "Ne arıyorsun?"
- tapOn: "İlan Ver"
- assertVisible:
    text: "Ürününü satmaya başla|İlanını oluştur"
- tapOn: "Favoriler"
- assertVisible: "Favoriler"
- tapOn: "Mesajlar"
- assertVisible: "Konuşmalar"
- tapOn: "Hesabım"
- assertVisible:
    text: "Hesap gerekli|Mobil hesabım"
- tapOn: "Keşfet"
- assertVisible: "Son eklenenler"
